<resources>
    <string name="app_name">Travel Diaries</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="read_more">read more...</string>
    <string name="tour_name">Berlin Tempelhof Airport: The Legend of Tempelhof</string>
    <string name="tour_location">Berlin, Germany</string>
    <string name="share">Share</string>
    <string name="back">Back</string>
    <string name="rated">Rated</string>
    <string name="rated_small">rated</string>
    <string name="and_said">and mentioned</string>
    <string name="anonymous">Anonymous</string>
    <string name="preparing">Curating experiences...</string>
    <string name="top_reviews">Top Reviews</string>
    <string name="all_reviews">All Reviews</string>
</resources>
